k8s-config/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: majdhatoum/product-service:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  ports:
  - port: 5000         # Service port
    targetPort: 5000   # Container port
    nodePort: 30002    # Specify a nodePort or let Kubernetes assign one
  selector:
    app: product-service
