k8s-config/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: majdhatoum/user-service:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  ports:
  - port: 5000         # Service port
    targetPort: 5000   # Container port
    nodePort: 30001    # Specify a nodePort or let Kubernetes assign one
  selector:
    app: user-service
